<resources>
    <string name="app_name">CTF</string>
    <string name="team_red">Red Team</string>
    <string name="team_blue">Blue Team</string>
    <string name="port">Port</string>
    <string name="pw">Password</string>
    <string name="apply">Apply</string>
    <string name="ip">Server adress</string>
    <string name="matchid">Match ID</string>
    <string name="blue_win">Blue Team wins!</string>
    <string name="matchend">End match</string>
    <string name="red_win">Red Team \nwins!</string>
    <string name="foul">Strike</string>
</resources>
