<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_blue"
                android:textAppearance="@android:style/TextAppearance.Holo.Widget"
                android:textColor="@color/color_team_blue"
                android:textSize="30sp"
                android:typeface="normal"
                app:fontFamily="monospace" />

            <Button
                android:id="@+id/blue_team_player_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_team_blue"
                android:onClick="onClick"
                android:text="blue_team_player_1"
                android:textSize="@dimen/Base_font_size" />

            <Button
                android:id="@+id/blue_team_player_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_team_blue"
                android:text="blue_team_player_2"
                android:textSize="@dimen/Base_font_size" />

            <Button
                android:id="@+id/blue_team_player_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_team_blue"
                android:text="blue_team_player_3"
                android:textSize="@dimen/Base_font_size" />

            <Button
                android:id="@+id/blue_team_player_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_team_blue"
                android:text="blue_team_player_4"
                android:textSize="@dimen/Base_font_size" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_red"
                android:textAppearance="@android:style/TextAppearance.Holo.Widget"
                android:textColor="@color/color_team_red"
                android:textSize="30sp"
                android:typeface="normal" />

            <Button
                android:id="@+id/red_team_player_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_team_red"
                android:text="red_team_player_1"
                android:textSize="@dimen/Base_font_size" />

            <Button
                android:id="@+id/red_team_player_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_team_red"
                android:text="red_team_player_2"
                android:textSize="@dimen/Base_font_size" />

            <Button
                android:id="@+id/red_team_player_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_team_red"
                android:text="red_team_player_3"
                android:textSize="@dimen/Base_font_size" />

            <Button
                android:id="@+id/red_team_player_4"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="@color/color_team_red"
                android:text="red_team_player_4"
                android:textSize="@dimen/Base_font_size" />

            <TextView
                android:id="@+id/matchend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/matchend"
                android:textSize="30sp" />

            <Button
                android:id="@+id/end_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_team_blue"
                android:text="@string/blue_win"
                android:textSize="50sp" />

            <Button
                android:id="@+id/end_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_team_red"
                android:text="@string/red_win"
                android:textSize="50sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>